--- a/CCIP/CCIP/StaffGroupView.xib
+++ b/CCIP/CCIP/StaffGroupView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PFC-Wc-Ls4">
-                    <rect key="frame" x="8" y="8" width="584" height="584"/>
+                    <rect key="frame" x="0.0" y="8" width="600" height="584"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="hBy-8d-lZV"/>
@@ -27,8 +27,8 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="PFC-Wc-Ls4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="2md-x0-C4N"/>
-                <constraint firstItem="PFC-Wc-Ls4" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="IK0-49-2Ti"/>
+                <constraint firstItem="PFC-Wc-Ls4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="2md-x0-C4N"/>
+                <constraint firstItem="PFC-Wc-Ls4" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="IK0-49-2Ti"/>
                 <constraint firstItem="PFC-Wc-Ls4" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottomMargin" id="qvC-CL-98s"/>
                 <constraint firstItem="PFC-Wc-Ls4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" id="uz6-un-lWV"/>
             </constraints>
