--- a/CCIP/CCIP/StaffView.xib
+++ b/CCIP/CCIP/StaffView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,10 +17,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ay1-aA-REu">
-                    <rect key="frame" x="8" y="8" width="584" height="584"/>
+                    <rect key="frame" x="0.0" y="8" width="600" height="584"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="yuD-TY-3LO">
-                        <size key="itemSize" width="304" height="60"/>
+                        <size key="itemSize" width="304" height="80"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -33,9 +33,9 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="ay1-aA-REu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="k3G-Fa-6Hb"/>
+                <constraint firstItem="ay1-aA-REu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="k3G-Fa-6Hb"/>
                 <constraint firstItem="ay1-aA-REu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" id="mTt-m3-8tS"/>
-                <constraint firstItem="ay1-aA-REu" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="nq7-QK-Wvf"/>
+                <constraint firstItem="ay1-aA-REu" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="nq7-QK-Wvf"/>
                 <constraint firstItem="ay1-aA-REu" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottomMargin" id="xH4-1M-1k2"/>
             </constraints>
             <connections>
