--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -138,6 +138,7 @@
         <scene sceneID="djy-Ka-IMA">
             <objects>
                 <tabBarController id="vFY-Ie-dA7" customClass="MainTabBarViewController" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="klf-rp-hYS"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="WUv-Be-dcN">
