--- a/CCIP/CCIP/StaffCell.xib
+++ b/CCIP/CCIP/StaffCell.xib
@@ -8,57 +8,58 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StaffCell" id="gJj-kL-uIn" customClass="StaffCell">
-            <rect key="frame" x="0.0" y="0.0" width="304" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="304" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StaffIconDefault.png" translatesAutoresizingMaskIntoConstraints="NO" id="F3y-GP-5oQ">
-                        <rect key="frame" x="8" y="8" width="64" height="64"/>
+                        <rect key="frame" x="43" y="8" width="64" height="64"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="64" id="3rG-gC-njg"/>
-                            <constraint firstAttribute="width" constant="64" id="kcA-VP-YdO"/>
+                            <constraint firstAttribute="height" constant="64" id="UOY-9z-ZXg"/>
+                            <constraint firstAttribute="width" constant="64" id="b3j-FI-SsG"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="行政組員兼場務組攤位組員" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
-                        <rect key="frame" x="80" y="48" width="216" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
+                        <rect key="frame" x="8" y="74" width="134" height="53"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="VtP-c1-6k3"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
-                        <rect key="frame" x="80" y="12" width="216" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="24" id="780-YZ-uqY"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="54" id="h9Y-sh-kOJ"/>
+                            <constraint firstAttribute="width" constant="134" id="oQr-IX-3fF"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="行政組員兼場務組攤位組員" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
+                        <rect key="frame" x="8" y="129" width="134" height="42"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="134" id="dmZ-JN-de6"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="42" id="jG0-Iz-5de"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstItem="zSp-Vx-Idi" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="80" id="6Dg-pS-yyE"/>
-                <constraint firstAttribute="trailing" secondItem="dtx-ch-J8c" secondAttribute="trailing" constant="8" id="9eL-lm-lJY"/>
-                <constraint firstAttribute="bottom" secondItem="dtx-ch-J8c" secondAttribute="bottom" constant="12" id="PZj-Sj-9Du"/>
-                <constraint firstItem="F3y-GP-5oQ" firstAttribute="centerY" secondItem="gJj-kL-uIn" secondAttribute="centerY" id="erW-6i-BNg"/>
-                <constraint firstAttribute="trailing" secondItem="zSp-Vx-Idi" secondAttribute="trailing" constant="8" id="hWG-21-5Mz"/>
-                <constraint firstItem="dtx-ch-J8c" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="80" id="rFx-Ub-zs7"/>
-                <constraint firstItem="F3y-GP-5oQ" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="8" id="wB6-cQ-Wqp"/>
-                <constraint firstItem="zSp-Vx-Idi" firstAttribute="top" secondItem="gJj-kL-uIn" secondAttribute="top" constant="12" id="weC-9h-i6T"/>
+                <constraint firstItem="dtx-ch-J8c" firstAttribute="centerX" secondItem="gJj-kL-uIn" secondAttribute="centerX" id="38M-Kw-bNP"/>
+                <constraint firstItem="dtx-ch-J8c" firstAttribute="top" secondItem="zSp-Vx-Idi" secondAttribute="bottom" constant="2" id="DDT-sA-xYd"/>
+                <constraint firstItem="dtx-ch-J8c" firstAttribute="top" secondItem="zSp-Vx-Idi" secondAttribute="bottom" constant="2" id="Ogg-iJ-m7M"/>
+                <constraint firstItem="zSp-Vx-Idi" firstAttribute="centerX" secondItem="gJj-kL-uIn" secondAttribute="centerX" id="QVy-O6-MlI"/>
+                <constraint firstItem="F3y-GP-5oQ" firstAttribute="top" secondItem="gJj-kL-uIn" secondAttribute="top" constant="8" id="YfO-TO-lSJ"/>
+                <constraint firstItem="zSp-Vx-Idi" firstAttribute="top" secondItem="F3y-GP-5oQ" secondAttribute="bottom" constant="2" id="wt4-98-byZ"/>
+                <constraint firstItem="F3y-GP-5oQ" firstAttribute="centerX" secondItem="gJj-kL-uIn" secondAttribute="centerX" id="zgc-cc-lDg"/>
             </constraints>
-            <size key="customSize" width="128" height="100"/>
+            <size key="customSize" width="51" height="190"/>
             <connections>
                 <outlet property="staffImg" destination="F3y-GP-5oQ" id="Q0k-dh-NfD"/>
                 <outlet property="staffName" destination="zSp-Vx-Idi" id="JgN-ci-UlN"/>
                 <outlet property="staffTitle" destination="dtx-ch-J8c" id="qy2-Su-bpw"/>
             </connections>
-            <point key="canvasLocation" x="311" y="246"/>
+            <point key="canvasLocation" x="311" y="291"/>
         </collectionViewCell>
     </objects>
     <resources>
