--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -556,7 +556,7 @@
         <!--Announce-->
         <scene sceneID="rLM-aC-FYG">
             <objects>
-                <viewController id="ba1-3I-FgV" userLabel="Announce" sceneMemberID="viewController">
+                <viewController id="ba1-3I-FgV" userLabel="Announce" customClass="AnnounceTableViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="T6f-ik-3ze"/>
                         <viewControllerLayoutGuide type="bottom" id="8AP-OM-vdg"/>
@@ -565,59 +565,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6eX-p7-TUc">
-                                <rect key="frame" x="20" y="50" width="560" height="370"/>
-                                <string key="text">請注意，在點下『確認使用』之後將會將可用餘額扣除，並且在一分鐘之內消失。
-
-請確認大會工作人員已經指示您按下『確認使用』按鈕後再按下按鈕，謝謝！</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0f-NH-c1U">
-                                <rect key="frame" x="20" y="470" width="560" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="107" id="Ya4-LV-ukF"/>
-                                    <constraint firstAttribute="height" constant="30" id="qN9-oE-xnI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <state key="normal" title="確認使用"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="Ya4-LV-ukF"/>
-                                    </mask>
-                                </variation>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NRX-bU-SPn" userLabel="Announce Table View">
+                                <rect key="frame" x="20" y="64" width="560" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AnnounceCell" id="Hmk-Qi-7k1" customClass="AnnounceTableViewCell">
+                                        <rect key="frame" x="0.0" y="92" width="560" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hmk-Qi-7k1" id="w2s-YF-NQD">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000-00-00 00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kxe-Os-o2e">
+                                                    <rect key="frame" x="8" y="12" width="231" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="T1T-wp-kWQ"/>
+                                                        <constraint firstAttribute="width" constant="231" id="x6U-Gh-vad"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="272" translatesAutoresizingMaskIntoConstraints="NO" id="WLc-nf-nhY">
+                                                    <rect key="frame" x="8" y="36" width="69" height="32"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kxe-Os-o2e" firstAttribute="top" secondItem="w2s-YF-NQD" secondAttribute="topMargin" constant="4" id="ASS-NC-wJ0"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="Kxe-Os-o2e" secondAttribute="leading" id="EGv-x4-zl8"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="WLc-nf-nhY" secondAttribute="leading" id="WJl-xG-cm8"/>
+                                                <constraint firstItem="WLc-nf-nhY" firstAttribute="top" secondItem="w2s-YF-NQD" secondAttribute="topMargin" constant="28" id="ckV-cn-2Uy"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="WLc-nf-nhY" secondAttribute="bottom" constant="3.5" id="d55-9I-qjc"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="msg" destination="WLc-nf-nhY" id="rxA-df-5Hn"/>
+                                            <outlet property="msgTime" destination="Kxe-Os-o2e" id="87c-73-EoS"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="checkinBtnEvent:" destination="O9C-ij-kHs" eventType="touchUpInside" id="AlJ-Jh-JTd"/>
+                                    <outlet property="dataSource" destination="ba1-3I-FgV" id="52G-dJ-Vge"/>
+                                    <outlet property="delegate" destination="ba1-3I-FgV" id="Wht-GU-Ad3"/>
                                 </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6eX-p7-TUc" firstAttribute="centerX" secondItem="O9C-ij-kHs" secondAttribute="centerX" id="2d9-f8-W2Q"/>
-                            <constraint firstAttribute="bottom" secondItem="b0f-NH-c1U" secondAttribute="bottom" constant="100" id="5iY-TS-HrQ"/>
-                            <constraint firstAttribute="bottom" secondItem="b0f-NH-c1U" secondAttribute="bottom" constant="233" id="K6e-xt-1Sd"/>
-                            <constraint firstItem="6eX-p7-TUc" firstAttribute="top" secondItem="O9C-ij-kHs" secondAttribute="top" constant="50" id="KxJ-U6-lCA"/>
-                            <constraint firstAttribute="trailing" secondItem="6eX-p7-TUc" secondAttribute="trailing" constant="20" id="SEa-4M-gu9"/>
-                            <constraint firstItem="b0f-NH-c1U" firstAttribute="top" secondItem="6eX-p7-TUc" secondAttribute="bottom" constant="50" id="ck0-29-2ib"/>
-                            <constraint firstItem="b0f-NH-c1U" firstAttribute="centerX" secondItem="O9C-ij-kHs" secondAttribute="centerX" id="cqw-CS-inJ"/>
-                            <constraint firstItem="b0f-NH-c1U" firstAttribute="leading" secondItem="O9C-ij-kHs" secondAttribute="leading" constant="20" id="myS-JE-u2b"/>
-                            <constraint firstAttribute="trailing" secondItem="b0f-NH-c1U" secondAttribute="trailing" constant="20" id="o2Y-df-ctL"/>
-                            <constraint firstItem="6eX-p7-TUc" firstAttribute="top" secondItem="O9C-ij-kHs" secondAttribute="top" constant="160" id="rNc-Ho-sGd"/>
-                            <constraint firstItem="6eX-p7-TUc" firstAttribute="leading" secondItem="O9C-ij-kHs" secondAttribute="leading" constant="20" id="w7y-nX-UYi"/>
+                            <constraint firstItem="NRX-bU-SPn" firstAttribute="leading" secondItem="O9C-ij-kHs" secondAttribute="leadingMargin" id="9x8-Fa-63Z"/>
+                            <constraint firstItem="8AP-OM-vdg" firstAttribute="top" secondItem="NRX-bU-SPn" secondAttribute="bottom" id="K7x-ys-4bW"/>
+                            <constraint firstItem="NRX-bU-SPn" firstAttribute="top" secondItem="T6f-ik-3ze" secondAttribute="bottom" id="RdS-cr-VAn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NRX-bU-SPn" secondAttribute="trailing" id="Zkk-I0-kD9"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="rNc-Ho-sGd"/>
-                                <exclude reference="K6e-xt-1Sd"/>
-                            </mask>
-                        </variation>
-                        <connections>
-                            <outlet property="checkinBtn" destination="b0f-NH-c1U" id="6hI-bx-m1Q"/>
-                            <outlet property="checkinMessabeLabel" destination="6eX-p7-TUc" id="ZkV-Qn-iyw"/>
-                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Announce" image="icon_ios_bell.png" id="bfa-yy-GWY"/>
+                    <connections>
+                        <outlet property="announceTableView" destination="NRX-bU-SPn" id="U3j-TF-0aO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pl2-Za-Jmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
